# adkv2

./: analysis_tools.py  config.py  dataset_service.py  main.py  pdf_tools.py  temp
macleods_dev_2/: README.md  pyproject.toml  requirements.txt
macleods_dev_2/deployment/: cleanup.py  readme  remote.py
macleods_dev_2/poc_macleods/: agent.py  readme
macleods_dev_2/poc_macleods/app/: config.py  main.py  state_keys.py
macleods_dev_2/poc_macleods/app/agents/: analysis_agent.py  entry_agent.py  pdf_agent.py  readme
macleods_dev_2/poc_macleods/app/models/: agent_schemas.py  readme
macleods_dev_2/poc_macleods/app/services/: dataset_service.py  gcs_helper.py  readme  report_service.py  validation_service.py
macleods_dev_2/poc_macleods/app/tools/: analysis_tools.py  duplicate_tools.py  excel_tools.py  pdf_tools.py  readme
