[project]
name = "poc_macleods"
version = "0.1.0"
description = "Distribution Analysis"
authors = [
    { name = "Karan Shah" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-aiplatform (>=1.101.0,<2.0.0)"
]

[tool.poetry]
packages = [{ include = "poc_macleods" }]

[tool.poetry.dependencies]
google-adk = "1.34.3"
google-cloud-aiplatform = { version = "1.154.0", extras = ["agent_engines", "adk"] }
google-genai="1.75.0"
google-cloud-storage = "3.11.0"
cloudpickle = "3.1.2"
pandas = "3.0.3"
numpy = "2.4.6"
openpyxl = "3.1.5"
xlrd = "2.0.2"
matplotlib = "3.10.9"
python-docx = "1.2.0"
python-dotenv = "1.1.1"
Pillow = "12.2.0"
pydantic = "2.13.4"
reportlab = "4.5.1"
opentelemetry-api="1.41.1"
opentelemetry-sdk="1.41.1"
opentelemetry-instrumentation-grpc="0.62b1"
opentelemetry-instrumentation-httpx="0.62b1"
opentelemetry-instrumentation-google-genai="0.7b1"

# This dependency is conditional and will only install on Windows
pywin32 = {version = "^310", markers = "sys_platform == 'win32'"}

[tool.poetry.scripts]
macleods_final = "poc_macleods:app"
deploy-remote = "deployment.remote:main"
cleanup = "deployment.cleanup:cleanup_deployment"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
